--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Projeto para o processo seletivo da Cubos",
   "main": "server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine",
+    "start": "node src/server.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,8 @@
     "graphql-yoga": "^1.18.3"
   },
   "devDependencies": {
+    "axios": "^0.21.0",
+    "jasmine": "^3.6.3",
     "nodemon": "^2.0.6"
   }
 }
